<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">iBooster</string>
    <string name="empty" translatable="false" />
    <string name="ad_here">Ad here</string>
    <string name="choose_language">Choose language</string>
    <string name="mnu_help">Help and feedback</string>
    <string name="mnu_update">Update</string>
    <string name="mnu_rate_star">Rate 5 stars</string>
    <string name="mnu_settings">Settings</string>
    <string name="mnu_about">About</string>
    <string name="mnu_policy">Privacy Policy</string>
    <string name="mnu_language">Language</string>
    <string name="junk_files">Junk Files</string>
    <string name="phone_boost">Phone Boost</string>
    <string name="cpu_cooler">CPU Cooler</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="notification_">Notification </string>
    <string name="other_tools">Other Tools</string>
    <string name="agree_to">By clicking START USING, you agree to the Privacy Policy</string>
    <string name="privacy">Privacy Policy</string>
    <string name="and">"and "</string>
    <string name="terms">Term of Services</string>
    <string name="permission_manager">Permission Manager</string>
    <string name="application">Application</string>
    <string name="apk_files">Apk files</string>
    <string name="wifi_mode">Wifi</string>
    <string name="sound_mode_on">Sound</string>
    <string name="sound_mode_vibrate">Vibrate</string>
    <string name="sound_mode_mute">Mute</string>
    <string name="bluetooth_mode">Bluetooth</string>
    <string name="flashlight_mode">Flashlight</string>
    <string name="airplane_mode">Airplane</string>
    <string name="power_mode">Power</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="mobile_hotspot">Mobile Hotspot</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="location">Location</string>
    <string name="nfc">NFC</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="sync">Sync</string>
    <string name="compass">Compass</string>
    <string name="storage">Storage</string>
    <string name="memory">Memory</string>
    <string name="used">Used</string>
    <string name="_00">0%</string>
    <string name="_0">0</string>
    <string name="percent">%</string>
    <string name="ram">Ram</string>
    <string name="ram_used">Ram used</string>
    <string name="test">2.65GB / 3.90GB</string>
    <string name="total_">Total: %s</string>
    <string name="free_">Free: %s</string>
    <string name="tool3">Tool 3</string>
    <string name="tool4">Tool 4</string>
    <string name="favouris_tool">Favourite Tools</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="update">Update</string>
    <string name="download">Download</string>
    <string name="install">Install</string>
    <string name="installed">Installed</string>
    <string name="installed_apps">Installed apps</string>
    <string name="running_apps">Running apps</string>
    <string name="fetching_running_apps">Fetching running apps&#8230;</string>
    <string name="feedback">Feedback</string>
    <string name="subject">Subject</string>
    <string name="detail">Detail</string>
    <string name="email">E-mail</string>
    <string name="leave_email">Leave your email</string>
    <string name="junk_file_found">Junk files</string>
    <string name="scanning">Scanning</string>
    <string name="scanning_percent">Scanning %s: %s</string>
    <string name="completed">Completed!</string>
    <string name="scan_completed">Scan completed!</string>
    <string name="clean_completed">Clean completed!</string>
    <string name="freeing_up">Freeing up!</string>
    <string name="ram_freed">%s RAM freed</string>
    <string name="boost_completed">Boost completed!</string>
    <string name="cpu_temperature">CPU temperature</string>
    <string name="cpu_temperature_is">Your CPU temperature is %s</string>
    <string name="temp_c">ºC</string>
    <string name="temp_f">ºF</string>
    <string name="cooling_down">Cooling down</string>
    <string name="blocked">Blocked</string>
    <string name="allowed">Allowed</string>
    <string name="no_data">No data</string>
    <string name="bugs">Bugs</string>
    <string name="suggestion">Suggestion</string>
    <string name="other">Other</string>
    <string name="notification_recommend">iBooster [Recommend]</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="title_notification_cleaner">Notification </string>
    <string name="title_setting_permission">Settings Permission</string>
    <string name="title_usage_access_permission">Usage Access Permission</string>
    <string name="title_feedback">Send us your feedback!</string>
    <string name="msg_permission_need_allow" tools:ignore="MissingTranslation">Permissions need to be allowed (%d)</string>
    <string name="msg_battery_status_is_good">Battery status is good</string>
    <string name="msg_cleaned_just_now">Cleaned just now!</string>
    <string name="msg_phone_optimized">Your phone is optimized!</string>
    <string name="msg_phone_cleaned">Your phone is cleaned!</string>
    <string name="msg_junk_cleaned">%s is cleaned!</string>
    <string name="msg_cleaning">Cleaning</string>
    <string name="msg_press_again_to_exit">Press again to exit</string>
    <string name="msg_boost_to_speedup">[Phone Boost] to speed up your device</string>
    <string name="msg_boost_to_speedup_2">Boost to speed up your device</string>
    <string name="msg_clean_to_speedup">Clean to speed up your device</string>
    <string name="msg_running_apps">%s running apps</string>
    <string name="msg_analyzing_phone">Analyzing your phone&#8230;</string>
    <string name="msg_analyzing_usage">Analyzing phone usage&#8230;</string>
    <string name="msg_junk_files_found">%s junk files found</string>
    <string name="msg_too_many_junk_file">Your phone has too many junk files</string>
    <string name="msg_cache_junk_file_is">Cache junk files are temperature file. Clean to optimize your phone</string>
    <string name="msg_cooldown_cpu_now">Cool down CPU now</string>
    <string name="msg_your_phone_is_cooling">Your device is cooling down. Cooling will take effect after a few minutes</string>
    <string name="msg_optimize_running_apps">Optimize %s running apps</string>
    <string name="msg_battery_saver_processes">To optimize your phone, tap to shutdown background processes.</string>
    <string name="msg_detail_feedback">In order to better solve the problem for you, please describe the specific functions and problems in detail.</string>
    <string name="msg_quit_without_cleanup">You want to quit without completing the cleanup?</string>
    <string name="msg_setting_permission">You need to grant writeable Settings Permission</string>
    <string name="msg_notification_cleaner">"You need to allow Notification access permission to clean."</string>
    <string name="msg_notification_cleaner_popup">"You need to allow Notification access permission to clean.\nFind to  and make sure the touch icon is turned on"</string>
    <string name="msg_usage_access_permission">To optimize your phone, you need grant to access usage data permission, allow usage tracking</string>
    <string name="msg_grant_usage_access_permission">Please GRANT permission to allow usage tracking</string>
    <string name="msg_cool_down">Cool down CPU will be improved performance of your phone</string>
    <string name="msg_save_power">To optimize your phone, press SAVE POWER button to shutdown background process</string>
    <string name="msg_optimizing">Optimizing! Please wait&#8230;</string>
    <string name="msg_save_power_apps">%s running apps need to be optimized to save power</string>
    <string name="msg_feedback">You encounter some problems or have suggestions? Give us your details in the input box below.</string>
    <string name="msg_feedback_hint">Describe your detail here</string>
    <string name="msg_feedback_detail_empty">Describe your detail here</string>
    <string name="msg_feedback_email_empty">Describe your detail here</string>
    <string name="msg_number_one">#1 boosting tool worldwide</string>
    <string name="msg_agree">Agree to the</string>
    <string name="msg_copyright">"Nguyễn Đình Thái\nAll Rights Reserved"</string>
    <string name="msg_junk_files_is">Junk files are temporary files that are left alone on the hard drive without any parent file using them</string>
    <string name="service_description">Turn ON to: </string>
    <string name="msg_usage_data_step1">Find to  app</string>
    <string name="msg_usage_data_step2">Switch to enable allowing usage tracking</string>
    <string name="msg_scan_file">Press GRANT to list apk files in your phone</string>
    <string name="btn_start_app">Start using</string>
    <string name="btn_clean">Clean</string>
    <string name="btn_clean_now">Clean now</string>
    <string name="btn_clean_junk">Clean junk</string>
    <string name="btn_clean_all">Clean all</string>
    <string name="btn_clean_up">Clean up</string>
    <string name="btn_boost">Boost</string>
    <string name="btn_save_power">Save Power</string>
    <string name="btn_boost_now">Boost now</string>
    <string name="btn_cool_down">Cool down</string>
    <string name="btn_optimize">Optimize</string>
    <string name="btn_optimize_now">Optimize now</string>
    <string name="btn_optimize_phone">Optimize phone</string>
    <string name="btn_send">Send</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_ok">OK</string>
    <string name="btn_go">GO</string>
    <string name="btn_gotit_go">Got it, Go</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_prev">Previous</string>
    <string name="btn_grant">Grant</string>
    <string name="btn_allow">Allow</string>
    <string name="btn_deny">Deny</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_later">Later</string>
    <string name="btn_ignore">Ignore</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_scanning">Scanning</string>
    <string name="btn_scanning_">Scanning&#8230;</string>
    <string name="btn_done">Done</string>
    <string name="btn_close">Close</string>
    <string name="btn_clean_notification">Clean Notification</string>
    <string name="btn_send_feedback">Send Feedback</string>
    <string name="btn_open">Open</string>
    <string name="btn_uninstall">Uninstall</string>
    <string name="btn_install">Install</string>
    <string name="notification">Notification</string>
    <string name="manage">Manage Apps</string>
    <string name="version">Version %s</string>
    <string name="apk_file">Apk file</string>
    <string name="apps_manager">App management</string>
    <string name="apps_manager_infomation">App information</string>
    <string name="btn_open_apps">Open</string>
    <string name="btn_stop_apps">Stop</string>
    <string name="btn_uninstall_apps">Uninstall</string>
    <string name="information_application">Information:</string>
    <string name="information_cachesize">Cache:</string>
    <string name="information_datasize">Data:</string>
    <string name="information_detail">Detail:</string>
    <string name="installed_apps_manager">Installed apps</string>
</resources>