<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_rate_star"
        android:icon="@drawable/ic_star_yellow_24dp"
        android:title="@string/mnu_rate_star" />
    <item
        android:id="@+id/nav_policy"
        android:icon="@drawable/ic_security_blue_24dp"
        android:title="@string/mnu_policy" />
    <item
        android:id="@+id/nav_language"
        android:icon="@drawable/ic_language_24dp"
        android:title="@string/mnu_language" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_blue_24dp"
        android:title="@string/mnu_about" />
    </group>
</menu>