<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step2"
        android:textSize="@dimen/font_h7"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_6"
        android:paddingBottom="@dimen/spacing_6"
        android:text="@string/msg_usage_data_step2"
        android:textSize="@dimen/font_normal" />

    <ImageView
        android:id="@+id/imageViewItemImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/empty"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:src="@drawable/img_usage_data_2" />

</LinearLayout>